--- a/docker/prometheus/prometheus/prometheus.yml
+++ b/docker/prometheus/prometheus/prometheus.yml
@@ -1,15 +1,27 @@
 global:
   scrape_interval: 10s
 scrape_configs:
- - job_name: prometheus
-   static_configs:
-    - targets:
-       - prometheus:9090
- - job_name: node
-   static_configs:
-    - targets:
-       - node-exporter:9100
-  # - job_name: 'komputer_gueh'
-  #   static_configs:
-  #     - targets: 
-  #       - 192.168.111.168:9100
+  - job_name: prometheus
+    static_configs:
+      - targets:
+          - prometheus:9090
+  - job_name: node
+    static_configs:
+      - targets:
+          - node-exporter:9100
+  - job_name: "jenaka.co.id"
+    # scheme: http
+    metrics_path: /probe
+    params:
+      module: [http_2xx] # Look for a HTTP 200 response.
+    static_configs:
+      - targets:
+          - https://sit-sakura-management.jenaka.co.id
+          - https://jenaka.co.id
+    relabel_configs:
+      - source_labels: [__address__]
+        target_label: __param_target
+      - source_labels: [__param_target]
+        target_label: instance
+      - target_label: __address__
+        replacement: 192.168.111.168:9115 # The blackbox exporter's real hostname:port.
